# zanuda

./: Makefile  dune  dune-project  zanuda.opam
api/zanuda/Zanuda_core/Config/: index.html
fix_gen/: diffs.txt  get_diff.sh  promote.sh
src/: CollectedLints.ml  Config.ml  dune  main.ml
src/fix/: asttype_visitor.ml  dune  env_visitor.ml  fix_lints.ml  ident_visitor.ml  lexing_visitor.ml  location_visitor.ml  longident_visitor.ml  path_visitor.ml  refactoring.ml  typedtree_visitor.ml  types_visitor.ml
src/fix/refactoring/: IfBool.ml  ProposeFunction.ml  Record1.ml  dune  lint_refactoring.ml  utils.ml
src/fix/replacement/: comments_parser.ml  dune  log.ml  padding.ml  refill.ml  repl.ml  simple_exmpl.ml  simple_exmpl2.ml
src/fix/visitors/: asttype_visitor.ml  dune  env_visitor.ml  ident_visitor.ml  lexing_visitor.ml  location_visitor.ml  longident_visitor.ml  path_visitor.ml  typedtree_visitor.ml  types_visitor.ml
src/typed/: If_bool.ml  Propose_function.ml  dune
tests/fix/FalseProposeFunction.t/: FalseProposeFunction.ml  run.t
tests/fix/IfBool.t/: IfBool.ml  run.t
tests/fix/NestedComments.t/: BugDemo.ml  run.t
tests/fix/ProposeFunction.t/: ProposeFunction.ml  run.t
tests/typed/ifbool.t/: run.t
tests/typed/nestedif.t/: dune  run.t
